# squared-game

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  changelog.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  usage.html
.doctrees/: changelog.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/_autosummary/: squared.doctree
.doctrees/scripts/: main.doctree
.github/: cliff_template.toml  labeler.yaml
.github/workflows/: documentation.yaml  pull-request-labeler.yaml  pull-request-linter.yaml  release.yaml  tests.yaml
_autosummary/: squared.html
_sources/: changelog.rst.txt
_sources/_autosummary/: squared.rst.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/source/_ext/: autosummarycaption.py  autosummaryfromconfig.py  betterreplace.py  includemdheader.py  metadata.py  projectmetadata.py
docs/source/_templates/autosummary/: module.rst
docs/source/scripts/: main.rst
scripts/: main.html
src/squared/: __init__.py  cli.py  lazy.py  token.py
src/squared/app/: __init__.py
src/squared/app/game/: __init__.py  main.py  player.py
src/squared/app/game/sprites/: __init__.py  player.py
src/squared/app/net/: __init__.py  callbacks.py  client.py  filters.py  packet.py  server.py
src/squared/modules/: __init__.py  ansi.py  log.py  network.py
src/squared/parsers/: main.py  types.py
src/tool/: __init__.pyi  __main__.py
src/tool/modules/: metadata.py
src/tool/modules/parsing/: __init__.py  parents.py
src/tool/modules/parsing/parsers/: __init__.py  main.py
src/tool/parsers/: __init__.py  main.py
tests/: conftest.py  test_dunder_attrs.py
